--- a/preprocess/test.ipynb
+++ b/preprocess/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,31 +250,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['SUBJECT_ID', 'ICUSTAY_ID', 'DBSOURCE', 'FIRST_CAREUNIT',\n",
+      "       'LAST_CAREUNIT', 'FIRST_WARDID', 'LAST_WARDID', 'INTIME', 'OUTTIME',\n",
+      "       'LOS', 'GENDER', 'DOB', 'DOD', 'DOD_HOSP', 'DOD_SSN', 'EXPIRE_FLAG',\n",
+      "       'age', 'readmission', 'mortality', 'los_3day', 'los_7day', 'ICD9_CODE',\n",
+      "       '12h_obs', '24h_obs', 'ID', 'code_name', 'code_offset', 'value', 'uom',\n",
+      "       'code_order', 'seq_len'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading:   0%|          | 0.00/436M [00:00<?, ?B/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 100%|██████████| 436M/436M [00:31<00:00, 13.9MB/s] \n",
+      "Some weights of the model checkpoint at emilyalsentzer/Bio_ClinicalBERT were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoTokenizer, AutoModel\n",
     "\n",
     "# Load the pre-trained model and tokenizer\n",
-    "model_name = \"dmis-lab/biobert-v1.1\"\n",
+    "model_name = \"emilyalsentzer/Bio_ClinicalBERT\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "model = AutoModel.from_pretrained(model_name)\n",
-    "max_length = 256\n",
     "\n",
     "\n",
     "def embed(input_text):\n",
-    "    tokens = tokenizer(input_text, return_tensors=\"pt\", max_length=max_length, truncation=True, padding=\"max_length\")\n",
-    "\n",
+    "    tokens = tokenizer(input_text, return_tensors=\"pt\")\n",
     "    embeddings = model(**tokens).last_hidden_state\n",
     "    pooled_embeddings = embeddings.mean(dim=1)\n",
     "    return pooled_embeddings"
@@ -282,25 +322,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>140</th>\n",
+       "      <th>141</th>\n",
+       "      <th>142</th>\n",
+       "      <th>143</th>\n",
+       "      <th>144</th>\n",
+       "      <th>145</th>\n",
+       "      <th>146</th>\n",
+       "      <th>147</th>\n",
+       "      <th>148</th>\n",
+       "      <th>149</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[[tensor(0.3046, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(-0.0359, grad_fn=&lt;UnbindBackward0&gt;), ...</td>\n",
+       "      <td>[[tensor(0.4241, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(-0.0262, grad_fn=&lt;UnbindBackward0&gt;), ...</td>\n",
+       "      <td>[[tensor(0.4338, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.2495, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.2482, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.2935, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.2651, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.1444, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[[tensor(0.0869, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3569, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.2128, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3085, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.2360, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.0925, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3569, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.1535, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.2128, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3085, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "      <td>[[tensor(0.3680, grad_fn=&lt;UnbindBackward0&gt;), t...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 150 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 0    \\\n",
+       "0  [[tensor(0.3046, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.0869, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 1    \\\n",
+       "0  [[tensor(-0.0359, grad_fn=<UnbindBackward0>), ...   \n",
+       "1  [[tensor(0.3569, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 2    \\\n",
+       "0  [[tensor(0.4241, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.2128, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 3    \\\n",
+       "0  [[tensor(-0.0262, grad_fn=<UnbindBackward0>), ...   \n",
+       "1  [[tensor(0.3085, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 4    \\\n",
+       "0  [[tensor(0.4338, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.2360, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 5    \\\n",
+       "0  [[tensor(0.2495, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.0925, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 6    \\\n",
+       "0  [[tensor(0.2482, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.3569, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 7    \\\n",
+       "0  [[tensor(0.2935, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.1535, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 8    \\\n",
+       "0  [[tensor(0.2651, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.2128, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 9    ...  \\\n",
+       "0  [[tensor(0.1444, grad_fn=<UnbindBackward0>), t...  ...   \n",
+       "1  [[tensor(0.3085, grad_fn=<UnbindBackward0>), t...  ...   \n",
+       "\n",
+       "                                                 140  \\\n",
+       "0  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 141  \\\n",
+       "0  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 142  \\\n",
+       "0  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 143  \\\n",
+       "0  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 144  \\\n",
+       "0  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 145  \\\n",
+       "0  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 146  \\\n",
+       "0  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 147  \\\n",
+       "0  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 148  \\\n",
+       "0  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "1  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...   \n",
+       "\n",
+       "                                                 149  \n",
+       "0  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...  \n",
+       "1  [[tensor(0.3680, grad_fn=<UnbindBackward0>), t...  \n",
+       "\n",
+       "[2 rows x 150 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def embed_data(df):\n",
-    "    df_embed = pd.DataFrame()\n",
-    "    for k in range(len(df)):\n",
-    "        for n in range(len(df['code_name'][k])):\n",
-    "            input_text = str(df['code_name'][k][n]) + str(df['value'][k][n]) + str(df['uom'][k][n])\n",
-    "            embed_input = embed(input_text)\n",
-    "            # Save to df\n",
-    "            df_embed = pd.concat([df_embed, pd.DataFrame(embed_input.detach().numpy())])\n",
+    "import torch\n",
     "\n",
-    "    return df_embed\n",
+    "def embed_data(df):\n",
+    "    # Create empty numpy array with len(df) rows and 256 columns\n",
+    "    df_embed = []\n",
+    "    for k in range(len(df)):\n",
+    "        df_embed.append([])\n",
+    "        for n in range(len(df['code_name'][k])):\n",
+    "            code_name = str(df['code_name'][k][n])\n",
+    "            value = str(df['value'][k][n])\n",
+    "            uom = str(df['uom'][k][n])\n",
+    "            features = [code_name, value, uom]\n",
+    "            # Embed features separately then concatenate the tensors\n",
+    "            embed_input = torch.cat([embed(feature) for feature in features])\n",
+    "            # Save to df\n",
+    "            df_embed[k].append(embed_input)\n",
+    "    return pd.DataFrame(df_embed)\n",
     "\n",
     "# Test with first 10 rows\n",
-    "df_test = df.head(10)\n",
+    "df_test = df.head(2)\n",
     "df_test = embed_data(df_test)\n",
-    "df_test.head()"
+    "df_test.head()\n",
+    "\n",
+    "# Save to pickle\n",
+    "#df_test.to_pickle('df_test.pkl')"
    ]
   }
  ],
