--- a/test_check_data.ipynb
+++ b/test_check_data.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/noelkj/miniconda3/envs/ai/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import os\n",
@@ -24,27 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m     labels \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39mload(f)\n\u001b[1;32m      7\u001b[0m \u001b[39m# Print the shapes of the features and labels\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFeatures shape: \u001b[39m\u001b[39m{\u001b[39;00mfeatures[\u001b[39m0\u001b[39;49m]\u001b[39m.\u001b[39;49mshape\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mLabels shape: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(labels[\u001b[39m0\u001b[39m])\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[39mprint\u001b[39m(labels[\u001b[39m0\u001b[39m])\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features shape: torch.Size([12800])\n",
+      "Labels shape: 28\n",
+      "[0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 2, 0, 5, 0, 2, 4, 2, 2]\n"
      ]
     }
    ],
    "source": [
     "# Load features and labels\n",
-    "with open(os.path.join(data_path, 'features.pkl'), 'rb') as f:\n",
-    "    features = pickle.load(f)\n",
-    "with open(os.path.join(data_path, 'labels.pkl'), 'rb') as f:\n",
-    "    labels = pickle.load(f)\n",
+    "features = torch.load(os.path.join(data_path, 'features.pkl'))\n",
+    "labels = torch.load(os.path.join(data_path, 'labels.pkl'))\n",
     "\n",
     "# Print the shapes of the features and labels\n",
     "print(f\"Features shape: {features[0].shape}\")\n",
